--- a/system/Config.in
+++ b/system/Config.in
@@ -32,4 +32,8 @@ config ECL_SYS_BASE_WAIT
 	bool "inter thread wait and signal"
 	default n
 
+config ECL_SYS_BASE_FILE
+	bool "file manipulation"
+	default n
+
 endmenu
